--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </nav>
     <div class="video-container">
         <video autoplay muted loop>
-            <source src="img/kaneki.mp4" type="video/mp4" />
+            <source src="./img/kaneki.mp4" type="video/mp4" />
         </video>
         <div class="caption">
           <h2>Kagune</h2>
