--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 
     <div class="video-container">
         <video autoplay muted loop>
-            <source src="img/kaneki.mp4" type="video/mp4"/>
+            <source src="./img/kaneki.mp4" type="video/mp4"/>
         </video>
         <div class="container-glass">
         </div>
