--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Me</title>
+    <title>Resume</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -23,7 +23,7 @@
         <div class="container-glass">
         </div>
         <div class="caption">
-            <h2><a href="https://www.instagram.com/humble.akh/" class="cont-link">Click Here</a></h2>
+            <h2><a href="https://drive.google.com/drive/folders/1s3LMC6DmummIAYyMxpDSkiK9ImUC1Nq2?usp=sharing" class="cont-link">Click Here</a></h2>
         </div>
     </div>
 
